# el-agent-evaluation

./: .gitignore  Agent 评估 - 执行-状态式.md  Agent 评测: 纲领性认知与垂域 Agent 评测方案.md  EL Agent测试集_260529_筛选后.xlsx  EL agent 专业技能清单.xlsx  README.md  evaluation-contract-template.md  evaluation-contracts-v0.2.md  leak_scan_report.json  pyproject.toml  run_manifest.json  synthesize_rubrics.py  专家标注指引-D1D2D4D7D8.md  周报_20260603_阶段总结.md
D2 缺答案补充数据/: manifest.json
attachments/: 5eda6ef6eac4_印刷蓝光OLED材料项目技术开发报告.docx  5f57238b6b8f_CH167-HR-CIC2-260331-HRF494WCJ094 030031-XBY-260401-7-3-CC0.79mA.csv  e0340e2421e6_CH166-HR-CIC2-260331-HRF494WCJ094 030031-XBY-260401-6-1-CC0.79mA.csv  e1a17f5e670d_CH168-HR-CIC2-260331-HRF494WCJ094 030031-XBY-260401-8-1-CC0.79mA.csv
execution_bundle/: attachment_manifest.json  cases.csv  cases.jsonl  d3_rubric_inputs.json  data_quality_report.json  prepared_cases.jsonl  run_manifest.json
rubrics/: fixed_d3_rubrics_expert.json  fixed_d3_rubrics_expert_summary.json
scripts/: openclaw_runner.py
src/el_eval_pipeline/: __init__.py  agent_bundle.py  attachments.py  cli.py  common.py  d3.py  evaluators.py  parsers.py  paths.py  preprocess.py  registry.py  runner.py  workspaces.py
tests/: test_pipeline.py
workspaces/EL260529F-0001/: agent_case_spec.json  prompt.txt
workspaces/EL260529F-0002/: agent_case_spec.json
workspaces/EL260529F-0003/: agent_case_spec.json  prompt.txt
workspaces/EL260529F-0004/: agent_case_spec.json
workspaces/EL260529F-0005/: agent_case_spec.json
workspaces/EL260529F-0006/: agent_case_spec.json  (+1 more)
测试集相关文件/: EML膜层厚度对比实验.pptx
(+101 files in other folders)
